Fixed vertical scrollbars on code
This fixes the problem with code having vertical scrollbars even though only a few pixels are actually hidden.

--- a/style.css
+++ b/style.css
@@ -313,6 +313,7 @@ code {
     display: inline-block;
     white-space: pre;
     overflow: auto;
+    overflow-y: hidden;
     width: 100%;
 }
 blockquote {
